--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/include/captcha.html.twig
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/include/captcha.html.twig
@@ -1,8 +1,8 @@
 {% if settingRow.captcha == true %}
-    <div class="textField_container captcha">
+    <div class="form_row textField_group captcha">
         <img src="data:image/png;base64,{{captchaImage}}" alt="Captcha image"/>
         <div class="mdc-text-field">
-            <input class="mdc-text-field__input" type="text" name="captcha" size="8" maxlength="7"/>
+            <input class="mdc-text-field__input" type="text" name="captcha" size="9" maxlength="7"/>
             <label class="mdc-text-field__label" for="mdc-text-field__input">Captcha</label>
             <div class="mdc-line-ripple"></div>
         </div>
