--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/scss/system/basic.scss
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/scss/system/basic.scss
@@ -1064,6 +1064,20 @@ main {
     }
 }
 
+.mdc-button {
+    margin: 5px 0;
+    
+    i {
+        display: inline-block;
+        width: 18px;
+        height: 18px;
+        margin-right: 8px;
+        font-size: 18px;
+        line-height: inherit;
+        vertical-align: top;
+    }
+}
+
 .page_container {
     .header {
         h1 {
@@ -1105,12 +1119,6 @@ main {
     }
 }
 
-.module {
-    width: 100%;
-    margin: auto;
-    border: 1px solid #dadada;
-    background-color: #ececec;
-}
 .module, .module_clean {
     padding: 5px;
     overflow: hidden;
@@ -1118,6 +1126,7 @@ main {
     .settings {
         display: none;
     }
+    
     .drag {
         display: none;
     }
@@ -1129,50 +1138,45 @@ main {
             margin: 0;
         }
     }
+    
     .mdc-card__actions {
         padding: 0 !important;
         min-height: auto !important;
     }
     
-    .textField_container {
-        margin-top: 5px;
+    .textField_group {
+        .material-icons {
+            margin-bottom: 5px;
+        }
     }
-    .mdc-text-field, mdc-select {
-        height: auto !important;
+    
+    .mdc-text-field, .mdc-select {
+        height: 30px !important;
     }
-    .mdc-text-field_hiddeFix {
+    .mdc-select {
+        margin-top: 8px;
+        margin-bottom: 18px;
+        
+        .mdc-select__surface {
+            padding-bottom: 0;
+        }
+    }
+    
+    .mdc-text-field_hidden_fix {
         display: block !important;
         margin: 0 !important;
+        height: 0 !important;
     }
 }
 
-.mdc-button {
-    margin: 5px 0;
+.module {
+    width: 100%;
+    margin: auto;
+    border: 1px solid #dadada;
+    background-color: #ececec;
     
-    i {
-        display: inline-block;
-        width: 18px;
-        height: 18px;
-        margin-right: 8px;
-        font-size: 18px;
-        line-height: inherit;
-        vertical-align: top;
-    }
-}
-
-.group_form {
-    > i, > label, > .form_row {
-        display: inline-block;
-    }
-    
-    > i {
-        vertical-align: middle;
-    }
-    
-    > label {
-        position: relative;
-        top: -5px;
-        padding-right: 10px;
+    .title {
+        border-bottom: 1px solid #dadada;
     }
 }
 
@@ -1183,5 +1187,28 @@ main {
     
     li {
         display: inline-block;
+    }
+}
+
+#panel_id_2 {
+    .form_user_authentication {
+        .container_submit {
+            .mdc-form-field, .mdc-button {
+                display: inline-block;
+            }
+
+            .mdc-form-field {
+                label[for=mdc_checkbox] {
+                    font-size: 10px;
+                }
+            }
+        }
+    }
+
+    .container_link {
+        a {
+            display: block;
+            text-decoration: none !important;
+        }
     }
 }
