--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/module/authentication.html.twig
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/module/authentication.html.twig
@@ -15,50 +15,46 @@
     {{response.module.label|trans}}
 {% endblock %}
 {% block moduleContainer %}
-    <div>
-        {% if form == null %}
-            <p><b>{% trans %}authentication_1{% endtrans %}</b></p>
-            <p>{{response.values.user.username}}</p>
-            <p><b>{% trans %}authentication_2{% endtrans %}</b></p>
-            <p>
-                {% for value in response.values.roleUserRow %}
-                    - {{value|trans}}
-                {% endfor %}
-            </p>
-            <p><b>{% trans %}authentication_3{% endtrans %}</b></p>
-            <p>{{response.values.dateLastLogin[0]}} [{{response.values.dateLastLogin[1]}}]</p>
-            <div>
-                <a class="mdc-button mdc-button--raised mdc-button--dense" href="{{path("root_render", {'_locale': urlLocale, 'urlCurrentPageId': 1, 'urlExtra': "cp_profile"})}}">{% trans %}authentication_4{% endtrans %}</a>
-                <a class="mdc-button mdc-button--raised mdc-button--dense" href="{{path("authentication_exit_check", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}">{% trans %}authentication_5{% endtrans %}</a>
-            </div>
-        {% else %}
-            {% form_theme form "@UebusaitoBundleViews/layout/layout_form_materialDesign.html.twig" %}
+    {% if form == null %}
+        <p><b>{% trans %}authentication_1{% endtrans %}</b></p>
+        <p>{{response.values.user.username}}</p>
+        <p><b>{% trans %}authentication_2{% endtrans %}</b></p>
+        <p>
+            {% for value in response.values.roleUserRow %}
+                - {{value|trans}}
+            {% endfor %}
+        </p>
+        <p><b>{% trans %}authentication_3{% endtrans %}</b></p>
+        <p>{{response.values.dateLastLogin[0]}} [{{response.values.dateLastLogin[1]}}]</p>
+        <div>
+            <a class="mdc-button mdc-button--raised mdc-button--dense" href="{{path("root_render", {'_locale': urlLocale, 'urlCurrentPageId': 1, 'urlExtra': "cp_profile"})}}">{% trans %}authentication_4{% endtrans %}</a>
+            <a class="mdc-button mdc-button--raised mdc-button--dense" href="{{path("authentication_exit_check", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}">{% trans %}authentication_5{% endtrans %}</a>
+        </div>
+    {% else %}
+        {% form_theme form "@UebusaitoBundleViews/layout/layout_form_materialDesign.html.twig" %}
 
-            <form id="form_authentication" class="form_user_authentication" action="{{path("authentication_enter_check", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
-                <div class="group_form">
-                    <i class="material-icons">pets</i>
-                    {{form_row(form._username, {'label': "authentication_6"})}}
-                </div>
-                <div class="group_form">
-                    <i class="material-icons">linear_scale</i>
-                    {{form_row(form._password, {'label': "authentication_7"})}}
-                </div>
-                
-                {{-include("@UebusaitoBundleViews/include/captcha.html.twig")-}}
-                
-                {{form_widget(form._remember_me, {'label': "authentication_8"}, {'class': "mdc-typography--caption"})}}
-                {{form_widget(form.submit, {'label': "authentication_9"})}}
-                
-                {{form_widget(form._token)}}
-            </form>
+        <form id="form_authentication" class="form_user_authentication" action="{{path("authentication_enter_check", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
+            {{form_row(form._username, {'label': "authentication_6", 'icon': "pets"})}}
+            {{form_row(form._password, {'label': "authentication_7", 'icon': "linear_scale"})}}
             
-            {% if (settingRow['website_active'] == true) %}
-                <div class="align_center">
-                    <a class="mdc-button mdc-button--raised mdc-button--dense" href="{{path("root_render", {'_locale': urlLocale, 'urlCurrentPageId': 3})}}">{% trans %}authentication_10{% endtrans %}</a>
-                    <a class="mdc-button mdc-button--raised mdc-button--dense" href="{{path("root_render", {'_locale': urlLocale, 'urlCurrentPageId': 4})}}">{% trans %}authentication_11{% endtrans %}</a>
-                </div>
+            {% if (settingRow['captcha'] == true) %}
+                {{-include("@UebusaitoBundleViews/include/captcha.html.twig")-}}
             {% endif %}
+            
+            {{form_widget(form._token)}}
+
+            <div class="container_submit">
+                {{form_widget(form.submit, {'label': "authentication_9"})}}
+                {{form_widget(form._remember_me, {'label': "authentication_8"})}}
+            </div>
+        </form>
+
+        {% if (settingRow['website_active'] == true) %}
+            <div class="container_link">
+                <a href="{{path("root_render", {'_locale': urlLocale, 'urlCurrentPageId': 3})}}">{% trans %}authentication_10{% endtrans %}</a>
+                <a href="{{path("root_render", {'_locale': urlLocale, 'urlCurrentPageId': 4})}}">{% trans %}authentication_11{% endtrans %}</a>
+            </div>
         {% endif %}
-    </div>
+    {% endif %}
 {% endblock %}
 {% block moduleFooter %}{% endblock %}
