--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/recover_password.html.twig
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/recover_password.html.twig
@@ -4,11 +4,8 @@
     {% if response.values.userId == null %}
         <h3 class="margin_clear">{% trans %}recover_password_1{% endtrans %}</h3>
         <form id="form_recover_password" action="{{path("recover_password", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
-            <div class="group_form">
-                <i class="material-icons">email</i>
-                {{form_row(form.email, {'label': "recover_password_2"})}}
-            </div>
-
+            {{form_row(form.email, {'label': "recover_password_2", 'icon': "email"})}}
+            
             {{form_widget(form._token)}}
             
             {{form_widget(form.submit, {'label': "button_4"})}}
@@ -16,15 +13,9 @@
     {% else %}
         <h3 class="margin_clear">{% trans %}recover_password_3{% endtrans %}</h3>
         <form id="form_change_password" action="{{path("recover_password", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
-            <div class="group_form">
-                <i class="material-icons">linear_scale</i>
-                {{form_row(form.password, {'label': "recover_password_4"})}}
-            </div>
-            <div class="group_form">
-                <i class="material-icons">linear_scale</i>
-                {{form_row(form.passwordConfirm, {'label': "recover_password_5"})}}
-            </div>
-
+            {{form_row(form.password, {'label': "recover_password_4", 'icon': "linear_scale"})}}
+            {{form_row(form.passwordConfirm, {'label': "recover_password_5", 'icon': "linear_scale"})}}
+            
             {{form_widget(form._token)}}
 
             {{form_widget(form.submit, {'label': "button_4"})}}
